# Competitive-Programming

./: README.md  pyproject.toml
src/Leetcode/: 392_is_subsequence.py
src/Tinkoff/: jo_test_1.py  jo_test_2.py  jo_test_3.py  jo_test_4.py  jo_test_5.py  jo_test_6.py  jo_test_7.py
src/Yandex/: items_tree.py  permute.py  spacy_test.py
src/codewars/go/: cat_dog_human_yars.go  clock.go  cuboid_volume.go  lost_without_map.go  past.go
src/codewars/python/: 3_or_5_multiples.py
