[tool.poetry]
name = "competitive-programming"
version = "0.1.0"
description = ""
authors = ["DanilaLabydin <labydin2605@mail.ru>"]
readme = "README.md"
packages = [{include = "competitive_programming"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dependencies.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
